# CredSafe

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: Home.py
app/assets/: theme.css
app/pages/: 1_Overview.py  2_Applicant_Scoring.py  3_Segments.py  4_Fairness.py  5_Explainability.py  6_Model_Runs.py
configs/: app.yaml  dataset.yaml  model_pd.yaml  policy.yaml
data/demo/: demo_applicants.csv
src/credsafe/: __init__.py
src/credsafe/data/: ingest.py  preprocess.py
src/credsafe/explain/: xai.py
src/credsafe/fairness/: metrics.py
src/credsafe/models/: evaluate.py  train_pd.py
src/credsafe/policy/: cutoff_profit.py
src/credsafe/utils/: io.py
tests/: test_fairness.py  test_policy.py
