[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credsafe"
version = "0.1.0"
description = "CredSafe: credit risk scoring, app, and MLOps scaffold"
authors = [{ name = "Aditya Gupta", email = "adityagupta372003@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "scikit-learn>=1.3",
  "lightgbm>=4.0; platform_system != 'Darwin' or platform_machine != 'arm64'",
  "catboost>=1.2",
  "optuna>=3.5",
  "mlflow>=2.12",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "pydantic>=2.6",
  "shap>=0.44",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
  "great-expectations>=0.18",
  "dvc>=3.50",
  "streamlit>=1.36",
  "rich>=13.7",
  "loguru>=0.7",
  "joblib>=1.3",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.3",
  "ruff>=0.4",
  "isort>=5.13",
  "pre-commit>=3.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
